Vertex Group Weights in Edit Mode Occludes In Front Armatures #72688

Closed
opened 2019-12-25 13:31:59 +01:00 by Pedro · 15 comments

2.png

{F8243740}System Information
Operating system: macOS Sierra, Versión 10.12.6.
Graphics card: Intel Iris Graphics 6100 1536 MB.

Blender Version
Blender Version 2.81a (2.81a 2019-12-04)
Worked: (optional)

Short description of error
Vertex Group Weights in Edit Mode hidden Bones. In Front activated.

Exact steps for others to reproduce the error

  1. Add Armature.
  2. In Front: activated.
  3. Select Cube.
  4. Edit Mode.
  5. Overlays, Vertex Group Weights: activated.
  • Bone no visible.
  • Line Guide no visible.

5.1. Overlays, Vertex Group Weights: disabled.

  • Bone is visible.

  • Line Guide is visible.

  • Note: No change to Weight Paint Mode. Only Edit Mode.

![2.png](https://archive.blender.org/developer/F8243741/2.png) {[F8243740](https://archive.blender.org/developer/F8243740/1.png)}**System Information** Operating system: macOS Sierra, Versión 10.12.6. Graphics card: Intel Iris Graphics 6100 1536 MB. **Blender Version** Blender Version 2.81a (2.81a 2019-12-04) Worked: (optional) **Short description of error** Vertex Group Weights in Edit Mode hidden Bones. In Front activated. **Exact steps for others to reproduce the error** 1. Add Armature. 2. In Front: activated. 3. Select Cube. 4. Edit Mode. 5. Overlays, Vertex Group Weights: activated. - Bone no visible. - Line Guide no visible. 5.1. Overlays, Vertex Group Weights: disabled. - Bone is visible. - Line Guide is visible. - Note: No change to Weight Paint Mode. Only Edit Mode.
Author

Added subscriber: @Pedro.huarez

Added subscriber: @Pedro.huarez
Member

Added subscriber: @DanielBystedt

Added subscriber: @DanielBystedt
Member

I do not experience the issue described above. I ran the exact steps to reproduce the error and did not get any issues where bone/armature was not visible.

System Information
Operating system: Windows-10-10.0.17763-SP0 64 Bits
Graphics card: GeForce GTX 1080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 432.00

Blender Version
Broken: version: 2.82 (sub 6), branch: master, commit date: 2019-12-24 16:58, hash: 33eabb8220

image.png

I do not experience the issue described above. I ran the exact steps to reproduce the error and did not get any issues where bone/armature was not visible. **System Information** Operating system: Windows-10-10.0.17763-SP0 64 Bits Graphics card: GeForce GTX 1080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 432.00 **Blender Version** Broken: version: 2.82 (sub 6), branch: master, commit date: 2019-12-24 16:58, hash: `33eabb8220` ![image.png](https://archive.blender.org/developer/F8244564/image.png)
Author

From view Weight Paint it works but in Edit Mode it doesn't.

From view Weight Paint it works but in Edit Mode it doesn't.

Added subscriber: @mano-wii

Added subscriber: @mano-wii

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

I can confirm.
The same is seen in Blender 2.80.
This used to work in Blender 2.79.

I can confirm. The same is seen in Blender 2.80. This used to work in Blender 2.79.
Member

I stand corrected. I get the same issue now

I stand corrected. I get the same issue now

Added subscriber: @MarcelLegindi

Added subscriber: @MarcelLegindi
Jeroen Bakker changed title from Bug Vertex Group Weights in Edit Mode to Vertex Group Weights in Edit Mode Occludes In Front Armatures 2020-03-31 13:28:47 +02:00
Member

Added subscriber: @Jeroen-Bakker

Added subscriber: @Jeroen-Bakker
Member

There is an open TODO in the codebase to merge this overlay with the weight paint overlay. They use the same shader and will solve this issue.

There is an open TODO in the codebase to merge this overlay with the weight paint overlay. They use the same shader and will solve this issue.

This issue was referenced by 782e6ea4ed

This issue was referenced by 782e6ea4edd9cb09f2583c8f28a24d6330dc6ce8
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Jeroen Bakker self-assigned this 2020-04-02 11:50:09 +02:00

This issue was referenced by fa8a3c8f26

This issue was referenced by fa8a3c8f26f4eeb09d5d8b2792d32887be4fe111

This issue was referenced by 88362565f6

This issue was referenced by 88362565f688028a4a098a7911534e1d757d1c69
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#72688
No description provided.